--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,11 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
+bootBuildImage{
+    imageName="sanberg.io/imagedemo/codesharingplatform:1.0.1"
+    publish = false
+}
+
 tasks.named('test') {
     useJUnitPlatform()
 }
