--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8889
 management.endpoints.web.exposure.include=*
 management.endpoint.shutdown.enabled=true
 
-spring.datasource.url=jdbc:h2:file:../snippets
+spring.datasource.url=jdbc:h2:file:~/snippets
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
